fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,18 +19,25 @@
 
 /* User Page Styles */
 
+.userpage {
+  max-width: 100%;
+  height: auto;
+}
+
 .userbtns > h2 {
-  margin-top: 100px;
+  margin-top: 10px;
   margin-bottom: 30px;
+  margin-left: 80px;
 }
 
 .userbtns > p {
   font-size: 15px;
+  margin-left: 80px;
 }
 
 .symptomForm {
   margin-top: 20px;
-  margin-left: 20px;
+  margin-left: 90px;
   display: flex;
   height: 90vh;
   align-items: left;
@@ -41,6 +48,7 @@
 .userbtn1,
 .userbtn2 {
   margin: 3px;
+  margin-left: 80px;
 }
 
 .form-check {
@@ -107,5 +115,9 @@
 /* Sidebar Styles */
 
 .useritems {
-  margin-left: 20px;
+  /* display: flex; */
+  max-width: 100%;
+  height: auto;
+  /* margin-left: 20px; */
+  margin-right: 25px;
 }
